base/nfs-subdir-external-provisioner/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nfs-subdir-external-provisioner
  namespace: nfs-subdir-external-provisioner
spec:
  endpointSelector:
    matchLabels:
      app: nfs-subdir-external-provisioner
  egress:
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  # NFS
  - toCIDR:
    - ${nfsServer}/32
    toPorts:
    - ports:
      - port: "111"
        protocol: ANY
      - port: "2049"
        protocol: ANY
